--- a/app/assets/stylesheets/social.css.scss
+++ b/app/assets/stylesheets/social.css.scss
@@ -49,7 +49,6 @@ margin: 0 auto !important;
     }
 }
 
-
 .social-ul-full li {
     font-family: 'hamilton19';
     letter-spacing: 3px;
@@ -60,55 +59,6 @@ margin: 0 auto !important;
     a {
         color: $gray;
     }
-}
-
-@font-face {
-    font-family: 'Mono Social Icons Font';
-    src: asset_url('fonts/MonoSocialIconsFont-1.10.eot');
-    src: asset_url('fonts/MonoSocialIconsFont-1.10.eot?#iefix') format('embedded-opentype'),
-         asset_url('fonts/MonoSocialIconsFont-1.10.woff') format('woff'),
-         asset_url('fonts/MonoSocialIconsFont-1.10.ttf') format('truetype'),
-         asset_url('fonts/MonoSocialIconsFont-1.10.svg#MonoSocialIconsFont') format('svg');
-    src: asset_url('fonts/MonoSocialIconsFont-1.10.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-  font-family: 'hamilton18';
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-718-webfont.eot');
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-718-webfont.eot?#iefix') format('embedded-opentype'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-718-webfont.woff') format('woff'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-718-webfont.ttf') format('truetype'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-718-webfont.svg#MonoSocialIconsFont') format('svg');
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-718-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-
-@font-face {
-  font-family: 'hamilton19';
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-719-webfont.eot');
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-719-webfont.eot?#iefix') format('embedded-opentype'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-719-webfont.woff') format('woff'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-719-webfont.ttf') format('truetype'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-719-webfont.svg#MonoSocialIconsFont') format('svg');
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-719-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'hamilton20';
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-720-webfont.eot');
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-720-webfont.eot?#iefix') format('embedded-opentype'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-720-webfont.woff') format('woff'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-720-webfont.ttf') format('truetype'),
-       asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-720-webfont.svg#MonoSocialIconsFont') format('svg');
-  src: asset_url('fonts/hamilton_wood_type_foundry_-_hwtunitgothic-720-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
 }
 
 .symbol, a.symbol:before {
